PRE 1.0.4 UPDATE COMMIT : Added secrets to env variable. Fixed and changed places to some CSS content. Better Slider design. Added Feature icon. Added function to check the brightness of an image in Rust. Used image brightness to change title of categories. Added better library design. Added comments for explaining the cmp_null warning by clippy.

--- a/src/components/Newgames-01/Newgames.css
+++ b/src/components/Newgames-01/Newgames.css
@@ -5,9 +5,23 @@
     grid-area: Newly-Added;
     gap: 2em;
     grid-auto-rows: 200px;
-    overflow-x: auto;
+    overflow-x: visible;
     position: relative;  
+    /* background-color: rgb(197 197 197 / 50%);
+    backdrop-filter: blur(10px); */
+    padding-top: 1em;
+    padding-left: 1em;
+    padding-bottom: 1em;
+    /* box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);  */
 }
+
+.New-Games { 
+    grid-row: 2; 
+    display: flex;
+    gap: 1em;
+    padding-left: 2em;
+    flex-direction: column; 
+} 
 
 .newly-added::-webkit-scrollbar {
     display: none; /* Hide the default scrollbar */
@@ -29,6 +43,14 @@
     max-height: -webkit-fill-available;
     border-radius: 18px;
     cursor: pointer;
+    transition: transform 0.3s ease;
+    /* box-shadow: 0px 4px 12px rgb(0 0 0 / 43%); */
+}
+
+
+.newly-added img:hover {
+    transform: scale(1.1);
+    
 }
 
 .gamehub-unique-game-title {
@@ -53,14 +75,16 @@
     align-items: center;
     width: 100%;
     padding: 1em;
+    /* background-color: rgb(197 197 197 / 50%);
+    backdrop-filter: blur(10px); 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); */
 }
 
 .title-category h2 {
     margin: 0;
     font-size: 1.5em;
-    -webkit-filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
-    filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
-    color: #fff; /* Adjust according to your theme */
+    font-weight: 800;
+    color: #fff; 
 }
 
 /* FILTER BOX */
@@ -79,19 +103,36 @@
     transition: background-color 0.3s ease-in-out;
 }
 
-.filter-box svg {
-    stroke: #fff;
+@keyframes animation-white-to-gray {
+    0% { color: inherit; }
+    100% { color: #333; }
+  }
+
+  
+  @keyframes animation-gray-to-white {
+    0% { color: inherit; }
+    100% { color: #fff; }
+  }
+
+
+.filter-box svg[text-color-theme="dark"] {
+    animation: 0.5s animation-white-to-gray ease-in-out;
+    color: #333;
 }
+
+.filter-box svg[text-color-theme="light"] {
+    animation: 0.5s animation-gray-to-white ease-in-out;
+    color: #fff;
+}
+
 
 .filter-icon {
     width: 1.2em; 
     height: 1.5em; 
-    -webkit-filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
-    filter: drop-shadow( 3px 3px 2px rgba(0, 0, 0, .7));
     vertical-align: middle;
 }
 
-/* Optional: Filter Box Hover Effect */
+
 /*
 .filter-box:hover {
     background-color: #b1aeae; 
